update article links

--- a/src/adjustment/cat/name.html
+++ b/src/adjustment/cat/name.html
@@ -47,13 +47,13 @@
                     
                     <p>&nbsp;</p>
                     <div class="other-article">
-                        <a href="./first-days.html">
+                        <a href="./adjustment/cat/first-days.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./preparing.html">
+                        <a href="./adjustment/cat/preparing.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
