--- a/src/adjustment/dog/first-days.html
+++ b/src/adjustment/dog/first-days.html
@@ -72,13 +72,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./poisons.html">
+                        <a href="./adjustment/dog/poisons.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./name.html">
+                        <a href="./adjustment/dog/name.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
