--- a/src/adjustment/dog/preparing.html
+++ b/src/adjustment/dog/preparing.html
@@ -99,13 +99,13 @@
                         пухкав приятел и да му осигури комфортна и любяща среда.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./poisons.html">
+                        <a href="./adjustment/dog/poisons.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./poisons.html">
+                        <a href="./adjustment/dog/poisons.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
