--- a/src/growth/cat/castration.html
+++ b/src/growth/cat/castration.html
@@ -67,19 +67,18 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./senility.html">
+                        <a href="./growth/cat/senility.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./parturition.html">
+                        <a href="./growth/cat/parturition.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
                         </a>
                     </div>
-
                 </div>
             </div>
 
