--- a/src/growth/cat/estrous-cycle.html
+++ b/src/growth/cat/estrous-cycle.html
@@ -74,11 +74,11 @@
 
                     <div class="other-article">
                         <div class="other-article-prev">
-                            <a href="pet-years.html">&laquo; Предходна статия:</a>
+                            <a href="./growth/cat/pet-years.html">&laquo; Предходна статия:</a>
                         </div>
 
                         <div class="other-article-next">
-                            <a href="breeding.html">Следваща статия &raquo;</a>
+                            <a href="./growth/cat/breeding.html">Следваща статия &raquo;</a>
                         </div>
                     </div>
                 </div>
