--- a/src/growth/cat/pet-years.html
+++ b/src/growth/cat/pet-years.html
@@ -140,13 +140,13 @@
 
                 <br>
                 <div class="other-article">
-                    <a href="./male-or-female.html">
+                    <a href="./growth/cat/male-or-female.html">
                         <div class="other-article-prev">
                             &laquo; Предходна статия:
                         </div>
                     </a>
 
-                    <a href="./estrous-cycle.html">
+                    <a href="./growth/cat/estrous-cycle.html">
                         <div class="other-article-next">
                             Следваща статия &raquo;
                         </div>
