--- a/src/growth/cat/phases.html
+++ b/src/growth/cat/phases.html
@@ -126,13 +126,13 @@
 
                         <br>
                         <div class="other-article">
-                            <a href="./senility.html">
+                            <a href="./growth/cat/senility.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./orphan.html">
+                            <a href="./growth/cat/orphan.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
