--- a/src/growth/cat/senility.html
+++ b/src/growth/cat/senility.html
@@ -64,13 +64,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./castration.html">
+                        <a href="./growth/cat/castration.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./phases.html">
+                        <a href="./growth/cat/phases.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
