--- a/src/growth/dog/male-or-female.html
+++ b/src/growth/dog/male-or-female.html
@@ -50,13 +50,13 @@
                             </ul>
 
                             <div class="other-article">
-                                <a href="./orphan.html">
+                                <a href="./growth/dog/orphan.html">
                                     <div class="other-article-prev">
                                         &laquo; Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./pet-years.html">
+                                <a href="./growth/dog/pet-years.html">
                                     <div class="other-article-next">
                                         Следваща статия &raquo;
                                     </div>
