--- a/src/growth/dog/parturition.html
+++ b/src/growth/dog/parturition.html
@@ -85,13 +85,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./pregnancy.html">
+                                <a href="./growth/dog/pregnancy.html">
                                     <div class="other-article-prev">
                                         &laquo; Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./castration.html">
+                                <a href="./growth/dog/castration.html">
                                     <div class="other-article-next">
                                         Следваща статия &raquo;
                                     </div>
