--- a/src/health-care/cat/first-aid.html
+++ b/src/health-care/cat/first-aid.html
@@ -66,13 +66,13 @@
                         виж: &bdquo;<strong><em>Раздел 7. Заболявания</em></strong>&ldquo; за подробни насоки.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./vet-exam.html">
+                        <a href="./health-care/cat/vet-exam.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./tick.html">
+                        <a href="./health-care/cat/tick.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
