--- a/src/health-care/cat/vet-exam.html
+++ b/src/health-care/cat/vet-exam.html
@@ -56,13 +56,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./passport.html">
+                        <a href="./health-care/cat/passport.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./first-aid.html">
+                        <a href="./health-care/cat/first-aid.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
