--- a/src/health-care/dog/first-aid.html
+++ b/src/health-care/dog/first-aid.html
@@ -70,13 +70,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./vet-exam.html">
+                        <a href="./health-care/dog/vet-exam.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./tick.html">
+                        <a href="./health-care/dog/tick.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
