--- a/src/health-care/dog/vaccination.html
+++ b/src/health-care/dog/vaccination.html
@@ -328,13 +328,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./deworming.html">
+                        <a href="./health-care/dog/deworming.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./microchipping.html">
+                        <a href="./health-care/dog/microchipping.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
