--- a/src/how-take-care/cat/language.html
+++ b/src/how-take-care/cat/language.html
@@ -194,7 +194,7 @@
                             </div>
                         </a>
 
-                        <a href="./sleep.html">
+                        <a href="./how-take-care/cat/sleep.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
