--- a/src/how-take-care/cat/toilet.html
+++ b/src/how-take-care/cat/toilet.html
@@ -83,13 +83,13 @@
                         <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="./sleep.html">
+                            <a href="./how-take-care/cat/sleep.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./cat-litter.html">
+                            <a href="./how-take-care/cat/cat-litter.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
