--- a/src/how-take-care/dog/fur.html
+++ b/src/how-take-care/dog/fur.html
@@ -100,13 +100,13 @@
 
 
                     <div class="other-article">
-                        <a href="./toilet.html">
+                        <a href="./how-take-care/dog/toilet.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./nails.html">
+                        <a href="./how-take-care/dog/nails.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
