--- a/src/how-take-care/dog/sleep.html
+++ b/src/how-take-care/dog/sleep.html
@@ -118,13 +118,13 @@
 
 
                     <div class="other-article">
-                        <a href="./language.html">
+                        <a href="./how-take-care/dog/language.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./toilet.html">
+                        <a href="./how-take-care/dog/toilet.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
