--- a/src/adjustment/cat/first-days.html
+++ b/src/adjustment/cat/first-days.html
@@ -42,13 +42,13 @@
                     </div>
                     <br>
                     <div class="other-article">
-                        <a href="./poisons.html ">
+                        <a href="./adjustment/cat/poisons.html ">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./name.html">
+                        <a href="./adjustment/cat/name.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
