--- a/src/adjustment/cat/poisons.html
+++ b/src/adjustment/cat/poisons.html
@@ -121,13 +121,13 @@
         </div>
         <br>
         <div class="other-article">
-          <a href="./preparing.html">
+          <a href="./adjustment/cat/preparing.html">
             <div class="other-article-prev">
               &laquo; Предходна статия:
             </div>
           </a>
 
-          <a href="./first-days.html">
+          <a href="./adjustment/cat/first-days.html">
             <div class="other-article-next">
               Следваща статия &raquo;
             </div>
