--- a/src/adjustment/cat/preparing.html
+++ b/src/adjustment/cat/preparing.html
@@ -178,13 +178,13 @@
                         <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="./name.html">
+                            <a href="./adjustment/cat/name.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./poisons.html">
+                            <a href="./adjustment/cat/poisons.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
