--- a/src/growth/cat/male-or-female.html
+++ b/src/growth/cat/male-or-female.html
@@ -40,13 +40,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./orphan.html">
+                        <a href="./growth/cat/orphan.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./pet-years.html">
+                        <a href="./growth/cat/pet-years.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
