--- a/src/growth/cat/orphan.html
+++ b/src/growth/cat/orphan.html
@@ -151,13 +151,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./phases.html">
+                        <a href="./growth/cat/phases.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./male-or-female.html">
+                        <a href="./growth/cat/male-or-female.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
