--- a/src/growth/cat/parturition.html
+++ b/src/growth/cat/parturition.html
@@ -122,13 +122,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./pregnancy.html">
+                        <a href="./growth/cat/pregnancy.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./castration.html">
+                        <a href="./growth/cat/castration.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
