--- a/src/growth/dog/breeding.html
+++ b/src/growth/dog/breeding.html
@@ -111,13 +111,13 @@
                     </ol>
                     <br>
                     <div class="other-article">
-                        <a href="./estrous-cycle.html">
+                        <a href="./growth/dog/estrous-cycle.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./pregnancy.html">
+                        <a href="./growth/dog/pregnancy.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
