--- a/src/growth/dog/castration.html
+++ b/src/growth/dog/castration.html
@@ -51,13 +51,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./senility.html">
+                                <a href="./growth/dog/senility.html">
                                     <div class="other-article-prev">
                                         &laquo; Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./parturition.html">
+                                <a href="./growth/dog/parturition.html">
                                     <div class="other-article-next">
                                         Следваща статия &raquo;
                                     </div>
