--- a/src/growth/dog/estrous-cycle.html
+++ b/src/growth/dog/estrous-cycle.html
@@ -55,11 +55,11 @@
 
                             <div class="other-article">
                                 <div class="other-article-prev">
-                                    <a href="pet-years.html">&laquo; Предходна статия:</a>
+                                    <a href="./growth/dog/pet-years.html">&laquo; Предходна статия:</a>
                                 </div>
     
                                 <div class="other-article-next">
-                                    <a href="breeding.html">Следваща статия &raquo;</a>
+                                    <a href="./growth/dog/breeding.html">Следваща статия &raquo;</a>
                                 </div>
                             </div>
                         </div>
