--- a/src/growth/dog/pet-years.html
+++ b/src/growth/dog/pet-years.html
@@ -250,11 +250,11 @@
                     <br>
                     <div class="other-article">
                         <div class="other-article-prev">
-                            <a href="pet-years.html">&laquo; Предходна статия:</a>
+                            <a href="./growth/dog/pet-years.html">&laquo; Предходна статия:</a>
                         </div>
 
                         <div class="other-article-next">
-                            <a href="breeding.html">Следваща статия &raquo;</a>
+                            <a href="./growth/dog/breeding.html">Следваща статия &raquo;</a>
                         </div>
                     </div>
 
