--- a/src/growth/dog/phases.html
+++ b/src/growth/dog/phases.html
@@ -80,11 +80,11 @@
 
                         <div class="other-article">
                             <div class="other-article-prev">
-                                <a href="./senility.html">&laquo; Предходна статия:</a>
+                                <a href="./growth/dog/senility.html">&laquo; Предходна статия:</a>
                             </div>
 
                             <div class="other-article-next">
-                                <a href="./orphan.html">Следваща статия &raquo;</a>
+                                <a href="./growth/dog/orphan.html">Следваща статия &raquo;</a>
                             </div>
                         </div>
 
