--- a/src/growth/dog/pregnancy.html
+++ b/src/growth/dog/pregnancy.html
@@ -48,13 +48,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./parturition.html">
+                                <a href="./growth/dog/parturition.html">
                                     <div class="other-article-prev">
                                         &laquo; Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./breeding.html">
+                                <a href="./growth/dog/breeding.html">
                                     <div class="other-article-next">
                                         Следваща статия &raquo;
                                     </div>
