--- a/src/growth/dog/senility.html
+++ b/src/growth/dog/senility.html
@@ -70,13 +70,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./castration.html">
+                        <a href="./growth/dog/castration.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./phases.html">
+                        <a href="./growth/dog/phases.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
