--- a/src/health-care/cat/passport.html
+++ b/src/health-care/cat/passport.html
@@ -117,13 +117,13 @@
 
                 <br>
                 <div class="other-article">
-                    <a href="./vaccination.html">
+                    <a href="./health-care/cat/vaccination.html">
                         <div class="other-article-prev">
                             &laquo; Предходна статия:
                         </div>
                     </a>
 
-                    <a href="./vet-exam.html">
+                    <a href="./health-care/cat/vet-exam.html">
                         <div class="other-article-next">
                             Следваща статия &raquo;
                         </div>
