--- a/src/health-care/cat/tick.html
+++ b/src/health-care/cat/tick.html
@@ -52,13 +52,13 @@
                         
                         <br>
                         <div class="other-article">
-                            <a href="./first-aid.html">
+                            <a href="./health-care/cat/first-aid.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./pills.html">
+                            <a href="./health-care/cat/pills.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
