--- a/src/health-care/dog/tick.html
+++ b/src/health-care/dog/tick.html
@@ -68,13 +68,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./first-aid.html">
+                        <a href="./health-care/dog/first-aid.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./pills.html">
+                        <a href="./health-care/dog/pills.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
