--- a/src/how-take-care/cat/check-up.html
+++ b/src/how-take-care/cat/check-up.html
@@ -97,13 +97,13 @@
                         <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="./fur.html">
+                            <a href="./how-take-care/cat/fur.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./check-up.html">
+                            <a href="./how-take-care/cat/check-up.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
