--- a/src/how-take-care/cat/fur.html
+++ b/src/how-take-care/cat/fur.html
@@ -87,13 +87,13 @@
                         
                         <p>&nbsp;</p>
                         <div class="other-article">
-                            <a href="./sleep.html">
+                            <a href="./how-take-care/cat/sleep.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./fur.html">
+                            <a href="./how-take-care/cat/fur.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
