--- a/src/how-take-care/cat/sleep.html
+++ b/src/how-take-care/cat/sleep.html
@@ -69,13 +69,13 @@
 
                         <br>
                         <div class="other-article">
-                            <a href="./language.html">
+                            <a href="./how-take-care/cat/language.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./toilet.html">
+                            <a href="./how-take-care/cat/toilet.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
