--- a/src/how-take-care/dog/check-up.html
+++ b/src/how-take-care/dog/check-up.html
@@ -141,7 +141,7 @@
 
 
                     <div class="other-article">
-                        <a href="./nails.html">
+                        <a href="./how-take-care/dog/nails.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
