--- a/src/how-take-care/dog/language.html
+++ b/src/how-take-care/dog/language.html
@@ -94,7 +94,7 @@
                             </div>
                         </a>
 
-                        <a href="./sleep.html">
+                        <a href="./how-take-care/dog/sleep.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
