--- a/src/how-take-care/dog/toilet.html
+++ b/src/how-take-care/dog/toilet.html
@@ -102,13 +102,13 @@
                         Вашето куче ще стане добре обучен член на семейството Ви.</p>
 
                     <div class="other-article">
-                        <a href="./toilet.html">
+                        <a href="./how-take-care/dog/toilet.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./nails.html">
+                        <a href="./how-take-care/dog/nails.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
