--- a/adjustment-cat-preparing.html
+++ b/adjustment-cat-preparing.html
@@ -866,13 +866,13 @@
                         <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="./name.html">
+                            <a href="./adjustment-cat-name.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./poisons.html">
+                            <a href="./adjustment-cat-poisons.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
