--- a/adjustment-dog-first-days.html
+++ b/adjustment-dog-first-days.html
@@ -761,13 +761,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./poisons.html">
+                        <a href="./adjustment-dog-poisons.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./name.html">
+                        <a href="./adjustment-dog-name.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
