--- a/adjustment-dog-poisons.html
+++ b/adjustment-dog-poisons.html
@@ -888,13 +888,13 @@
                 </div>
                 <br>
                 <div class="other-article">
-                    <a href="./preparing.html">
+                    <a href="./adjustment-dog-preparing.html">
                         <div class="other-article-prev">
                             « Предходна статия:
                         </div>
                     </a>
 
-                    <a href="./first-days.html">
+                    <a href="./adjustment-dog-first-days.html">
                         <div class="other-article-next">
                             Следваща статия »
                         </div>
