--- a/growth-cat-breeding.html
+++ b/growth-cat-breeding.html
@@ -746,13 +746,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./estrous-cycle.html">
+                        <a href="./growth-cat-estrous-cycle.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./pregnancy.html">
+                        <a href="./growth-cat-pregnancy.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
