--- a/growth-dog-castration.html
+++ b/growth-dog-castration.html
@@ -747,13 +747,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./senility.html">
+                                <a href="./growth-dog-senility.html">
                                     <div class="other-article-prev">
                                         « Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./parturition.html">
+                                <a href="./growth-dog-parturition.html">
                                     <div class="other-article-next">
                                         Следваща статия »
                                     </div>
