--- a/growth-dog-phases.html
+++ b/growth-dog-phases.html
@@ -776,11 +776,11 @@
 
                         <div class="other-article">
                             <div class="other-article-prev">
-                                <a href="./senility.html">« Предходна статия:</a>
+                                <a href="./growth-dog-senility.html">« Предходна статия:</a>
                             </div>
 
                             <div class="other-article-next">
-                                <a href="./orphan.html">Следваща статия »</a>
+                                <a href="./growth-dog-orphan.html">Следваща статия »</a>
                             </div>
                         </div>
 
