--- a/growth-dog-pregnancy.html
+++ b/growth-dog-pregnancy.html
@@ -744,13 +744,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./parturition.html">
+                                <a href="./growth-dog-parturition.html">
                                     <div class="other-article-prev">
                                         « Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./breeding.html">
+                                <a href="./growth-dog-breeding.html">
                                     <div class="other-article-next">
                                         Следваща статия »
                                     </div>
