--- a/growth-dog-senility.html
+++ b/growth-dog-senility.html
@@ -766,13 +766,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./castration.html">
+                        <a href="./growth-dog-castration.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./phases.html">
+                        <a href="./growth-dog-phases.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
