--- a/health-care-cat-deworming.html
+++ b/health-care-cat-deworming.html
@@ -1290,13 +1290,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./which-vet.html">
+                                <a href="./health-care-cat-which-vet.html">
                                     <div class="other-article-prev">
                                         « Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./vaccination.html">
+                                <a href="./health-care-cat-vaccination.html">
                                     <div class="other-article-next">
                                         Следваща статия »
                                     </div>
