--- a/health-care-cat-vaccination.html
+++ b/health-care-cat-vaccination.html
@@ -904,13 +904,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./deworming.html">
+                        <a href="./health-care-cat-deworming.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./microchipping.html">
+                        <a href="./health-care-cat-microchipping.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
