--- a/health-care-dog-pills.html
+++ b/health-care-dog-pills.html
@@ -793,13 +793,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./tick.html">
+                        <a href="./health-care-dog-tick.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./which-vet.html">
+                        <a href="./health-care-dog-which-vet.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
