--- a/how-take-care-cat-cat-litter.html
+++ b/how-take-care-cat-cat-litter.html
@@ -802,13 +802,13 @@
                     <p>&nbsp;</p>
 
                     <div class="other-article">
-                        <a href="./toilet.html">
+                        <a href="./how-take-care-cat-toilet.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./fur.html">
+                        <a href="./how-take-care-cat-fur.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
