--- a/how-take-care-cat-language.html
+++ b/how-take-care-cat-language.html
@@ -884,7 +884,7 @@
                             </div>
                         </a>
 
-                        <a href="./sleep.html">
+                        <a href="./how-take-care-cat-sleep.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
