--- a/how-take-care-cat-nails.html
+++ b/how-take-care-cat-nails.html
@@ -812,13 +812,13 @@
                     <p>&nbsp;</p>
 
                     <div class="other-article">
-                        <a href="./fur.html">
+                        <a href="./how-take-care-cat-fur.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./check-up.html">
+                        <a href="./how-take-care-cat-check-up.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
