--- a/how-take-care-dog-check-up.html
+++ b/how-take-care-dog-check-up.html
@@ -829,7 +829,7 @@
 
 
                     <div class="other-article">
-                        <a href="./nails.html">
+                        <a href="./how-take-care-dog-nails.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
