--- a/how-take-care-dog-fur.html
+++ b/how-take-care-dog-fur.html
@@ -788,13 +788,13 @@
 
 
                     <div class="other-article">
-                        <a href="./toilet.html">
+                        <a href="./how-take-care-dog-toilet.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./nails.html">
+                        <a href="./how-take-care-dog-nails.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
