--- a/adjustment-cat-first-days.html
+++ b/adjustment-cat-first-days.html
@@ -731,13 +731,13 @@
                     </div>
                     <br>
                     <div class="other-article">
-                        <a href="./poisons.html ">
+                        <a href="./adjustment-cat-poisons.html ">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./name.html">
+                        <a href="./adjustment-cat-name.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
