--- a/adjustment-cat-poisons.html
+++ b/adjustment-cat-poisons.html
@@ -810,13 +810,13 @@
         </div>
         <br>
         <div class="other-article">
-          <a href="./preparing.html">
+          <a href="./adjustment-cat-preparing.html">
             <div class="other-article-prev">
               « Предходна статия:
             </div>
           </a>
 
-          <a href="./first-days.html">
+          <a href="./adjustment-cat-first-days.html">
             <div class="other-article-next">
               Следваща статия »
             </div>
