--- a/adjustment-dog-preparing.html
+++ b/adjustment-dog-preparing.html
@@ -788,13 +788,13 @@
                         пухкав приятел и да му осигури комфортна и любяща среда.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./poisons.html">
+                        <a href="./adjustment-dog-poisons.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./poisons.html">
+                        <a href="./adjustment-dog-poisons.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
