--- a/growth-cat-castration.html
+++ b/growth-cat-castration.html
@@ -759,19 +759,18 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./senility.html">
+                        <a href="./growth-cat-senility.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./parturition.html">
+                        <a href="./growth-cat-parturition.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
                         </a>
                     </div>
-
                 </div>
             </div>
 
