--- a/growth-cat-estrous-cycle.html
+++ b/growth-cat-estrous-cycle.html
@@ -765,11 +765,11 @@
 
                     <div class="other-article">
                         <div class="other-article-prev">
-                            <a href="pet-years.html">« Предходна статия:</a>
+                            <a href="./growth-cat-pet-years.html">« Предходна статия:</a>
                         </div>
 
                         <div class="other-article-next">
-                            <a href="breeding.html">Следваща статия »</a>
+                            <a href="./growth-cat-breeding.html">Следваща статия »</a>
                         </div>
                     </div>
                 </div>
