--- a/growth-cat-male-or-female.html
+++ b/growth-cat-male-or-female.html
@@ -732,13 +732,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./orphan.html">
+                        <a href="./growth-cat-orphan.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./pet-years.html">
+                        <a href="./growth-cat-pet-years.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
