--- a/growth-cat-parturition.html
+++ b/growth-cat-parturition.html
@@ -814,13 +814,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./pregnancy.html">
+                        <a href="./growth-cat-pregnancy.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./castration.html">
+                        <a href="./growth-cat-castration.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
