--- a/growth-cat-pregnancy.html
+++ b/growth-cat-pregnancy.html
@@ -775,13 +775,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./parturition.html">
+                                <a href="./growth-cat-parturition.html">
                                     <div class="other-article-prev">
                                         « Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./breeding.html">
+                                <a href="./growth-cat-breeding.html">
                                     <div class="other-article-next">
                                         Следваща статия »
                                     </div>
