--- a/growth-dog-male-or-female.html
+++ b/growth-dog-male-or-female.html
@@ -746,13 +746,13 @@
                             </ul>
 
                             <div class="other-article">
-                                <a href="./orphan.html">
+                                <a href="./growth-dog-orphan.html">
                                     <div class="other-article-prev">
                                         « Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./pet-years.html">
+                                <a href="./growth-dog-pet-years.html">
                                     <div class="other-article-next">
                                         Следваща статия »
                                     </div>
