--- a/growth-dog-parturition.html
+++ b/growth-dog-parturition.html
@@ -781,13 +781,13 @@
 
                             <br>
                             <div class="other-article">
-                                <a href="./pregnancy.html">
+                                <a href="./growth-dog-pregnancy.html">
                                     <div class="other-article-prev">
                                         « Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="./castration.html">
+                                <a href="./growth-dog-castration.html">
                                     <div class="other-article-next">
                                         Следваща статия »
                                     </div>
