--- a/growth-dog-pet-years.html
+++ b/growth-dog-pet-years.html
@@ -939,11 +939,11 @@
                     <br>
                     <div class="other-article">
                         <div class="other-article-prev">
-                            <a href="pet-years.html">« Предходна статия:</a>
+                            <a href="./growth-dog-pet-years.html">« Предходна статия:</a>
                         </div>
 
                         <div class="other-article-next">
-                            <a href="breeding.html">Следваща статия »</a>
+                            <a href="./growth-dog-breeding.html">Следваща статия »</a>
                         </div>
                     </div>
 
