--- a/health-care-cat-first-aid.html
+++ b/health-care-cat-first-aid.html
@@ -756,13 +756,13 @@
                         виж: „<strong><em>Раздел 7. Заболявания</em></strong>“ за подробни насоки.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./vet-exam.html">
+                        <a href="./health-care-cat-vet-exam.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./tick.html">
+                        <a href="./health-care-cat-tick.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
