--- a/health-care-cat-microchipping.html
+++ b/health-care-cat-microchipping.html
@@ -761,13 +761,13 @@
                         да има информация за кучето Ви преди месец.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./vaccination.html">
+                        <a href="./health-care-cat-vaccination.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./passport.html">
+                        <a href="./health-care-cat-passport.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
