--- a/health-care-cat-passport.html
+++ b/health-care-cat-passport.html
@@ -806,13 +806,13 @@
 
                 <br>
                 <div class="other-article">
-                    <a href="./vaccination.html">
+                    <a href="./health-care-cat-vaccination.html">
                         <div class="other-article-prev">
                             « Предходна статия:
                         </div>
                     </a>
 
-                    <a href="./vet-exam.html">
+                    <a href="./health-care-cat-vet-exam.html">
                         <div class="other-article-next">
                             Следваща статия »
                         </div>
