--- a/health-care-cat-pills.html
+++ b/health-care-cat-pills.html
@@ -775,13 +775,13 @@
                         
                         <br>
                         <div class="other-article">
-                            <a href="./tick.html">
+                            <a href="./health-care-cat-tick.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./which-vet.html">
+                            <a href="./health-care-cat-which-vet.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
