--- a/health-care-cat-vet-exam.html
+++ b/health-care-cat-vet-exam.html
@@ -746,13 +746,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./passport.html">
+                        <a href="./health-care-cat-passport.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./first-aid.html">
+                        <a href="./health-care-cat-first-aid.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
