--- a/health-care-cat-which-vet.html
+++ b/health-care-cat-which-vet.html
@@ -755,13 +755,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./first-aid.html">
+                        <a href="./health-care-cat-first-aid.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./deworming.html">
+                        <a href="./health-care-cat-deworming.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
