--- a/health-care-dog-deworming.html
+++ b/health-care-dog-deworming.html
@@ -1590,13 +1590,13 @@
 
                                                 <br>
                                                 <div class="other-article">
-                                                    <a href="./which-vet.html">
+                                                    <a href="./health-care-dog-which-vet.html">
                                                         <div class="other-article-prev">
                                                             « Предходна статия:
                                                         </div>
                                                     </a>
 
-                                                    <a href="./vaccination.html">
+                                                    <a href="./health-care-dog-vaccination.html">
                                                         <div class="other-article-next">
                                                             Следваща статия »
                                                         </div>
