--- a/health-care-dog-passport.html
+++ b/health-care-dog-passport.html
@@ -809,13 +809,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./vaccination.html">
+                        <a href="./health-care-dog-vaccination.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./vet-exam.html">
+                        <a href="./health-care-dog-vet-exam.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
