--- a/health-care-dog-which-vet.html
+++ b/health-care-dog-which-vet.html
@@ -751,13 +751,13 @@
                         кабинет или клиника и да попитате дали могат да поемат Вашия случай.</p>
                     <br>
                     <div class="other-article">
-                        <a href="./deworming.html">
+                        <a href="./health-care-dog-deworming.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./first-aid.html">
+                        <a href="./health-care-dog-first-aid.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
