--- a/how-take-care-cat-fur.html
+++ b/how-take-care-cat-fur.html
@@ -776,13 +776,13 @@
                         
                         <p>&nbsp;</p>
                         <div class="other-article">
-                            <a href="./sleep.html">
+                            <a href="./how-take-care-cat-sleep.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./fur.html">
+                            <a href="./how-take-care-cat-fur.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
