--- a/how-take-care-dog-language.html
+++ b/how-take-care-dog-language.html
@@ -782,7 +782,7 @@
                             </div>
                         </a>
 
-                        <a href="./sleep.html">
+                        <a href="./how-take-care-dog-sleep.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
