--- a/how-take-care-dog-sleep.html
+++ b/how-take-care-dog-sleep.html
@@ -806,13 +806,13 @@
 
 
                     <div class="other-article">
-                        <a href="./language.html">
+                        <a href="./how-take-care-dog-language.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./toilet.html">
+                        <a href="./how-take-care-dog-toilet.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
