update article reference

--- a/src/adjustment/cat/name.html
+++ b/src/adjustment/cat/name.html
@@ -2,9 +2,11 @@
 <include what="@@layout/header.html" var:title="Избор на име"></include>
 <include what="@@layout/menu.html"></include>
 
-<section id="article-review">
-    <include what="@@components/adjustment-cat.html"></include>
-</section>
+<section id="content-section">
+
+    <section id="article-review">
+        <include what="@@components/adjustment-cat.html"></include>
+    </section>
     
     <section id="main-content">
         <div id="content" class="content">
@@ -45,17 +47,10 @@
                         <li>Джак</li>
                     </ul>
                     
-                    <p>&nbsp;</p>
                     <div class="other-article">
                         <a href="./adjustment/cat/first-days.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
-                            </div>
-                        </a>
-
-                        <a href="./adjustment/cat/preparing.html">
-                            <div class="other-article-next">
-                                Следваща статия &raquo;
                             </div>
                         </a>
                     </div>
