--- a/adjustment-cat-name.html
+++ b/adjustment-cat-name.html
@@ -677,8 +677,10 @@
 
 </header>
 
-<section id="article-review">
-    <div>
+<section id="content-section">
+
+    <section id="article-review">
+        <div>
     <a href="./adjustment-dog-adjustment.html">
         <button id="dog-btn">Куче</button>
     </a> 
@@ -693,7 +695,7 @@
     <li><a href="./adjustment-cat-first-days.html">Първи дни на котката у дома</a></li>
     <li><a href="./adjustment-cat-name.html">Избор на име</a></li>
 </ol>
-</section>
+    </section>
     
     <section id="main-content">
         <div id="content" class="content">
@@ -734,17 +736,10 @@
                         <li>Джак</li>
                     </ul>
                     
-                    <p>&nbsp;</p>
                     <div class="other-article">
                         <a href="./adjustment-cat-first-days.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
-                            </div>
-                        </a>
-
-                        <a href="./adjustment-cat-preparing.html">
-                            <div class="other-article-next">
-                                Следваща статия »
                             </div>
                         </a>
                     </div>
@@ -782,7 +777,7 @@
 
         </div>
     </section>
-
+</section>
 
 <!-- FOOTER -->
         <footer class="footer">
