Diseases section new menu

--- a/@layout/footer.html
+++ b/@layout/footer.html
@@ -52,7 +52,7 @@
                 </div>
             
                 <div class="footer-terms-of-use center-text fs12 pb24">
-                    <a href="./terms.html">Условия за ползване</a>
+                    <a href="./terms-terms.html">Условия за ползване</a>
                 </div>
             </div>
         </footer>
