--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -87,7 +87,7 @@
 
             <ul>
                 <li>Операторът запазва правото си да изменя настоящите общи условия по свое усмотрение като във всеки
-                    един момент актуалните <a href="./terms.html">Условия за ползване</a> на Уебсайта ще бъдат
+                    един момент актуалните <a href="./terms-terms.html">Условия за ползване</a> на Уебсайта ще бъдат
                     публикувани на същия.</li>
             </ul>
 
