Diseases menu components

--- a/@components/diseases-dog.html
+++ b/@components/diseases-dog.html
@@ -4,15 +4,8 @@
     <a href="./diseases/cat/diseases.html"><button id="cat-btn">Коте</button></a>
 </div>
 <ol>
-    <li><a href="./diseases/dog/canine-parvovirus-infection.html">Кучешка парвовироза</a></li>
-    <li><a href="./diseases/dog/canine-coronavirus-infection.html">Кучешка коронавироза</a></li>
-    <li><a href="./diseases/dog/canine-distemper.html">Гана</a></li>
-    <li><a href="./diseases/dog/ehrlichiosis.html">Ерлихиоза</a></li>
-    <li><a href="./diseases/dog/heartworm.html">Дирофилариоза</a></li>
-    <li><a href="./diseases/fleas.html">Бълхи</a></li>
-    <li><a href="./diseases/ticks.html">Кърлежи</a></li>
-    <li><a href="./diseases/tapeworms.html">Цестодоза</a></li>
-    <li><a href="./diseases/mammary-gland-tumor.html">Тумор на млечната жлеза</a></li>
-    <li><a href="./diseases/lymphoma.html">Лимфома</a></li>
-    <li><a href="./diseases/rabies.html">Бяс</a></li>
+    <li><a href="./diseases-dog-top-diseases.html">ТОП 10 заболявания, заради които посещавате ветеринар</a></li>
+    <li><a href="./diseases-dog-top-symptoms.html">ТОП 10 оплаквания (симптоми), заради които посещавате ветеринар</a></li>
+    <li><a href="./diseases-dog-all-diseases.html">Всички заболявания при кучетата</a></li>
+    <li><a href="./diseases-dog-all-symptoms.html">Всички оплаквания (симптоми) при кучетата</a></li>
 </ol>
