--- a/src/diseases/infectious/feline-coronavirus-infection.html
+++ b/src/diseases/infectious/feline-coronavirus-infection.html
@@ -92,7 +92,7 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./feline-panleukopenia.html">
+                        <a href="./infectious/feline-panleukopenia.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
