--- a/src/diseases/infectious/rabies.html
+++ b/src/diseases/infectious/rabies.html
@@ -6,25 +6,7 @@
 <section id="content-section">
 
     <section id="article-review">
-        <div>
-            <a href="../diseases/dog/diseases.html"><button id="dog-btn-clicked">Куче</button></a>
-            или
-            <a href="../diseases/cat/diseases.html"><button id="cat-btn">Коте</button></a>
-        </div>
-        <ol>
-            <li><a href="./dog/canine-parvovirus-infection.html">Кучешка парвовироза</a></li>
-            <li><a href="./dog/canine-coronavirus-infection.html">Кучешка коронавироза</a></li>
-            <li><a href="./dog/canine-distemper.html">Гана</a></li>
-            <li><a href="./dog/ehrlichiosis.html">Ерлихиоза</a></li>
-            <li><a href="./dog/heartworm.html">Дирофилариоза</a></li>
-            <li><a href="./fleas.html">Бълхи</a></li>
-            <li><a href="./ticks.html">Кърлежи</a></li>
-            <li><a href="./tapeworms.html">Цестодоза</a></li>
-            <li><a href="./mammary-gland-tumor.html">Тумор на млечната жлеза</a></li>
-            <li><a href="./lymphoma.html">Лимфома</a></li>
-            <li><a href="./rabies.html">Бяс</a></li>
-        </ol>
-
+        <include what="@@components/diseases-cat.html"></include>
     </section>
 
     <section id="main-content">
@@ -32,7 +14,7 @@
             <div id="overlay"></div>
 
             <div id="articleContent">
-                <div id="article-content--dogs">
+                <div id="article-content--cats">
                     <h1>Бяс</h1>
 
                     <h2>Какво е бяс и какво я причинява?</h2>
