--- a/src/diseases/parasitic/tapeworms.html
+++ b/src/diseases/parasitic/tapeworms.html
@@ -6,25 +6,7 @@
 <section id="content-section">
 
     <section id="article-review">
-        <div>
-            <a href="../diseases/dog/diseases.html"><button id="dog-btn-clicked">Куче</button></a>
-            или
-            <a href="../diseases/cat/diseases.html"><button id="cat-btn">Коте</button></a>
-        </div>
-        <ol>
-            <li><a href="../canine-parvovirus-infection.html">Кучешка парвовироза</a></li>
-            <li><a href="../canine-coronavirus-infection.html">Кучешка коронавироза</a></li>
-            <li><a href="../canine-distemper.html">Гана</a></li>
-            <li><a href="../ehrlichiosis.html">Ерлихиоза</a></li>
-            <li><a href="../heartworm.html">Дирофилариоза</a></li>
-            <li><a href="./fleas.html">Бълхи</a></li>
-            <li><a href="./ticks.html">Кърлежи</a></li>
-            <li><a href="./tapeworms.html">Цестодоза</a></li>
-            <li><a href="./mammary-gland-tumor.html">Тумор на млечната жлеза</a></li>
-            <li><a href="./lymphoma.html">Лимфома</a></li>
-            <li><a href="./rabies.html">Бяс</a></li>
-        </ol>
-
+        <include what="@@components/diseases-dog.html"></include>
     </section>
 
     <section id="main-content">
