--- a/src/diseases/neoplasms/lymphoma.html
+++ b/src/diseases/neoplasms/lymphoma.html
@@ -6,25 +6,7 @@
 <section id="content-section">
 
     <section id="article-review">
-        <div>
-            <a href="../diseases/dog/diseases.html"><button id="dog-btn-clicked">Куче</button></a>
-            или
-            <a href="../diseases/cat/diseases.html"><button id="cat-btn">Коте</button></a>
-        </div>
-        <ol>
-            <li><a href="../dog/canine-parvovirus-infection.html">Кучешка парвовироза</a></li>
-            <li><a href="../dog/canine-coronavirus-infection.html">Кучешка коронавироза</a></li>
-            <li><a href="../dog/canine-distemper.html">Гана</a></li>
-            <li><a href="../dog/ehrlichiosis.html">Ерлихиоза</a></li>
-            <li><a href="../dog/heartworm.html">Дирофилариоза</a></li>
-            <li><a href="./fleas.html">Бълхи</a></li>
-            <li><a href="./ticks.html">Кърлежи</a></li>
-            <li><a href="./tapeworms.html">Цестодоза</a></li>
-            <li><a href="./mammary-gland-tumor.html">Тумор на млечната жлеза</a></li>
-            <li><a href="./lymphoma.html">Лимфома</a></li>
-            <li><a href="./rabies.html">Бяс</a></li>
-        </ol>
-
+        <include what="@@components/diseases-dog.html"></include>
     </section>
 
     <section id="main-content">
@@ -111,19 +93,6 @@
                         потърсете ветеринарен лекар възможно най-скоро.</p>
 
                     <br>
-                    <div class="other-article">
-                        <a href="./lymphoma.html">
-                            <div class="other-article-prev">
-                                &laquo; Предходна статия:
-                            </div>
-                        </a>
-
-                        <a href="./fleas.html">
-                            <div class="other-article-next">
-                                Следваща статия &raquo;
-                            </div>
-                        </a>
-                    </div>
 
                 </div>
             </div>
